// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab/> renders a button 1`] = `
<span
  className="f1d4emls"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="fmey6qa"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders disabled 1`] = `
<span
  className="f10nc1e"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="fmey6qa"
      disabled={true}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders selected 1`] = `
<span
  className="fypci4f"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={true}
      className="fmey6qa"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders stretched 1`] = `
<span
  className="fq1m34n"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="fmey6qa"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;
